# rust_tcp_sc_demo

./: .dockerignore  .gitignore  Makefile  dockerfile  dockerfile_base  dockerfile_test  readme.md
aitrans-server/: run_tcp_in_docker.sh
tcp_client/: Cargo.toml
tcp_client/src/: main.rs  streamparser.rs
tcp_server/: Cargo.toml
tcp_server/src/: main.rs
